resources/css/style.css
body {
  background-color: black;
  font-family: verdana;
  text-align: center;
  color: white;
  font-weight: normal;
}

h1 {
  font-size: 50px;
}

video {
  align-items: center;
}

.home-middle h1 {
  font-size: 42 px;
  font-weight: 300;
}

.home-middle p {
  font-size: 21px;
  color: gray;
}

img {
  align-items: center;
}

.footer p {
  text-align: right;
}

a {
  color: aquamarine;
}

